--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,13 +1,17 @@
 .outerContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  border: 1px solid black;
+  border-radius: 1rem;
+  margin: 1rem;
+  padding: 1rem 2rem;
 }
 
 .iconContainer {
   display: flex;
-  justify-content: space-evenly;
-  width: 10vw;
+  justify-content: space-between;
+  width: 5vw;
 }
 
 .iconContainer .icon {
